update(demo): prevent contact chips list overflows

--- a/src/components/chips/demoContactChips/style.scss
+++ b/src/components/chips/demoContactChips/style.scss
@@ -39,3 +39,9 @@ md-contact-chips {
 .md-chips {
   padding: 0.5rem 0 0.8rem ;
 }
+
+
+.fixedRows {
+  height:250px;
+  overflow:hidden;
+}
